# korean-law-ai-bot

./: .gitignore  Dockerfile  index.html  main.py  package-lock.json  requirements.txt
lexguard-mcp/: .gitignore  FINAL_SUBMISSION_CHECKLIST.md  check_api_error.py  env.example  mcp-config-guide.md  mcp.json.new  pyproject.toml  render.yaml  requirements.txt
lexguard-mcp/api_crawler/: .gitignore  README.md  api_index.json
lexguard-mcp/api_crawler/apis/: 3단_비교_목록_조회.json  3단비교_본문_조회.json  개인정보보호위원회_결정문_목록_조회.json  개인정보보호위원회_결정문_본문_조회.json  경찰청_법령해석_목록_조회.json  경찰청_법령해석_본문_조회.json  고용노동부_법령해석_목록_조회.json  고용노동부_법령해석_본문_조회.json  고용보험심사위원회_결정문_목록_조회.json  고용보험심사위원회_결정문_본문_조회.json  과학기술정보통신부_법령해석_목록_조회.json  과학기술정보통신부_법령해석_본문_조회.json  관세청_법령해석_목록_조회.json  관세청_법령해석_본문_조회.json  교육부_법령해석_목록_조회.json  교육부_법령해석_본문_조회.json  국가데이터처_법령해석_목록_조회.json  국가데이터처_법령해석_본문_조회.json  국가보훈부_법령해석_목록_조회.json  국가보훈부_법령해석_본문_조회.json  국가유산청_법령해석_목록_조회.json  국가유산청_법령해석_본문_조회.json  국가인권위원회_결정문_목록_조회.json  국가인권위원회_결정문_본문_조회.json  국민권익위원회_결정문_목록_조회.json  국민권익위원회_결정문_본문_조회.json  국민권익위원회_특별행정심판재결례_목록_조회.json  국민권익위원회_특별행정심판재결례_본문_조회.json  국방부_법령해석_목록_조회.json  국방부_법령해석_본문_조회.json  국세청_법령해석_목록_조회.json  국세청_법령해석_본문_조회.json  국토교통부_법령해석_목록_조회.json  국토교통부_법령해석_본문_조회.json  금융위원회_결정문_목록_조회.json  금융위원회_결정문_본문_조회.json  기상청_법령해석_목록_조회.json  기상청_법령해석_본문_조회.json  기획재정부_법령해석_목록_조회.json  기획재정부_법령해석_본문_조회.json  (+119 more)
lexguard-mcp/sample/: NDA (비밀유지계약) – 기간·범위 쟁점  서비스 이용 약관 (환불·면책 쟁점)  임대차(전세) 계약서 (보증금·갱신 쟁점)  질문리스트  프리랜서 용역 계약서
lexguard-mcp/scripts/: smoke_document_issue.py
lexguard-mcp/src/: __init__.py  main.py
(+54 files in other folders)
